Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -390,12 +390,12 @@ hr.line {
 
 .widget {
     .extendednavigation {
-        float: none;
         position: relative;
         min-height: 50px;
         padding:10px 0px;
         display:inline-block;
         float:right;
+        width: 65%;
         @media @tablet {
             background-color: transparent;
         }
@@ -405,7 +405,6 @@ hr.line {
             }
         }
         ul {
-            float: right;
             text-align: center;
             padding: 0;
             @media @tablet {
